k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: backend
          image: jenish48/todo-app-backend:483be054f6a67c99b8c49896ed71cab1e23b5c79
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
