k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: jenish48/todo-app-frontend:80a8777c51e551649b2be58ac466a1e57d7f4020
          imagePullPolicy: Always
          ports:
            - containerPort: 80
