k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  type: ClusterIP   # ✅ expose outside
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000   # ✅ match backend port
