k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: default  
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 80
